feature/integration-tests + small refactors