@@ -1,6 +1,5 @@
 package bg.enterprise.parent_app.controller;
 
-import bg.enterprise.parent_app.model.CreateDtoFactory;
 import bg.enterprise.parent_app.model.dto.ChildDto;
 import bg.enterprise.parent_app.model.mapper.ChildMapper;
 import org.junit.jupiter.api.MethodOrderer;
@@ -11,7 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Collections;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
@@ -20,7 +19,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-public class ChildControllerTest extends IntegrationSpec {
+class ChildControllerTest extends IntegrationSpec {
 
     @Autowired
     ChildMapper childMapper;
@@ -35,9 +34,17 @@ public class ChildControllerTest extends IntegrationSpec {
         LocalDate birthdate = LocalDate.of(2020, 5, 15);
         String notes = "Healthy";
 
-        ChildDto input = CreateDtoFactory.createChildDto(parentId, firstName, lastName, birthdate, notes, List.of(), List.of());
+        ChildDto input = ChildDto.builder()
+                .parentId(parentId)
+                .firstName(firstName)
+                .lastName(lastName)
+                .birthdate(birthdate)
+                .notes(notes)
+                .prescriptions(Collections.emptyList())
+                .notifications(Collections.emptyList())
+                .build();
 
-        mockMvc.perform(post("/children")
+        mockMvc.perform(post("/child")
                         .content(objectMapper.writeValueAsString(input))
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
@@ -60,9 +67,17 @@ public class ChildControllerTest extends IntegrationSpec {
         LocalDate birthdate = LocalDate.of(2020, 5, 15);
         String notes = "Updated notes";
 
-        ChildDto input = CreateDtoFactory.createChildDto(parentId, firstName, lastName, birthdate, notes, List.of(), List.of());
+        ChildDto input = ChildDto.builder()
+                .parentId(parentId)
+                .firstName(firstName)
+                .lastName(lastName)
+                .birthdate(birthdate)
+                .notes(notes)
+                .prescriptions(Collections.emptyList())
+                .notifications(Collections.emptyList())
+                .build();
 
-        mockMvc.perform(put("/children/{id}", 2L)
+        mockMvc.perform(put("/child/{id}", 2L)
                         .content(objectMapper.writeValueAsString(input))
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
@@ -75,7 +90,7 @@ public class ChildControllerTest extends IntegrationSpec {
     @Test
     @Order(3)
     void getChildById() throws Exception {
-        mockMvc.perform(get("/children/{id}", 2L))
+        mockMvc.perform(get("/child/{id}", 2L))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.firstName").value("Updated"))
@@ -85,7 +100,7 @@ public class ChildControllerTest extends IntegrationSpec {
     @Test
     @Order(4)
     void deleteChild() throws Exception {
-        mockMvc.perform(delete("/children/{id}", 2L))
+        mockMvc.perform(delete("/child/{id}", 2L))
                 .andDo(print())
                 .andExpect(status().isNoContent())
                 .andReturn();
